# Projeto-CPE

./: CMakePresets.json  README.md
batalha naval/: .gitignore  CMakeLists.txt  notepad++config.txt  video
batalha naval/src/: batalhaNavalProtipo.cpp  canvas.hpp  entidades.hpp  geraEntidades.hpp  main.cpp  regras.hpp
